ZMCIntegral/complex/zmccomplex.124666.err
  File "./complex-test.py", line 15
    return x[0]+x[1]j
                    ^
SyntaxError: invalid syntax
srun: error: gpu-0-0: task 0: Exited with exit code 1
